--- a/Earth/_config.yml
+++ b/Earth/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Knight
 description: 'You can't leave this world to the people you despise.'
-url: 'https://knight-boy.github.io/Self' 
+url: 'https://knight-boy.github.io/Earth' 
 baseurl: ''
 google_analytics: 'UA-501066-1'
 # disqus_shortname: 'your-disqus-name'
