--- a/Heaven/_config.yml
+++ b/Heaven/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: Knight
 description: You can't leave this world to the people you despise.
-url: https://knight-boy.github.io
+url: https://knight-boy.github.io/Heaven
 logo: halve.png                                       # Site logo
 locale: en_US
 
