Update Weibo account

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ github-url:         knight-boy
 #youtube:           username
 #youtube-channel:   channel
 #soundcloud:        username
-weibo:              3787836194/profile?topnav=1&wvr=6&is_all=1
+weibo:              u/3787836194
 #flickr:            username
 #codepen:           pen
 #keybase:           username
