--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Knight
-bio:                'All well done, enjoy!'
-description:        "You can't leave this world to the people you despise."
+bio:                "My brother once told me that nothing someone says before the word 'but' really counts."
+description:        "My brother once told me that nothing someone says before the word 'but' really counts."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
