--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 # Set this true if you want to tile your background image, otherwise it will be covered
 tiled_bg:           true
-locale:             zh_CN
+locale:             zh-CN
 url:                https://www.knightboy.cn
 
 # Jekyll
